@@ -1,6 +1,7 @@
 0.9.2
 - monetdb_queryinfo method to find out things about an arbitrary query cheaply
-- new option monetdb.sequential
+- new options monetdb.sequential, monetdb.debug.query and monetdb.debug.mapi
+- debug output now uses the message() function
 
 0.9.1
 - dbGetInfo() now supported on MonetDBConnection (dplyr compatibility)
